@@ -11,7 +11,7 @@ Name:       harbour-fuoten
 # << macros
 
 Summary:    ownCloud/Nextcloud News App Client
-Version:    0.8.0
+Version:    0.8.1
 Release:    1
 Group:      Applications/Internet
 License:    GPL-3.0
