@@ -16,7 +16,7 @@ AboutPage {
     appDescription: qsTrId("about-desc")
     appHomepage: "https://github.com/Huessenbergnetz/Fuoten"
     appCopyrightYearFrom: "2016"
-    appCopyrightYearTo: "2022"
+    appCopyrightYearTo: "2023"
     appCopyrightHolder: "Matthias Fehring"
     appLicense: "GNU General Public License, Version 3"
     appLicenseFile: "GPLv3.qml"
